fix img on mobile

--- a/assets/scss/section.scss
+++ b/assets/scss/section.scss
@@ -4,9 +4,12 @@
   margin: 0 auto;
   padding: 0 2rem;
 
-  img {
-    width: 100%;
+  p {
+    img {
+      width: 100%;
+    }
   }
+
   /*DESKTOP*/
   @media screen and (max-width: 1070px) {
     max-width: 850px;
